--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["nekitdev <nekit@nekit.dev>"]
 edition = "2021"
 description = "Expanding tildes in paths."
 documentation = "https://docs.rs/expand-tilde"
-readme = "REAMDE.md"
+readme = "README.md"
 repository = "https://github.com/nekitdev/expand-tilde"
 license = "MIT"
 keywords = ["path", "tilde", "expand"]
